fix: registration and scripts on WSL