@@ -15,15 +15,17 @@ public class AuthenticationProvider{
 
     public User login(String email, String password) {
         try {
-            ProcessBuilder pb = new ProcessBuilder("scripts/login.sh", email, password);
-            Process process = pb.start();
-            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+            String[] cmd = new String[]{"/bin/bash", "./scripts/login.sh", email,password};
+            Process pr = Runtime.getRuntime().exec(cmd);
+
+            BufferedReader reader = new BufferedReader(new InputStreamReader(pr.getInputStream()));
+            User user=null;
             String line;
             while ((line = reader.readLine()) != null) {
                 if (line.startsWith("data: ")) {
                     String[] userDetails = line.substring(6).split(":");
                     
-                    User user;
+        
         
                     if (Role.valueOf(userDetails[2].toUpperCase()) == Role.ADMIN) {
                         user = new Admin();
@@ -41,7 +43,7 @@ public class AuthenticationProvider{
                     return user;
                 }
             }
-            int exitCode = process.waitFor();
+            int exitCode = pr.waitFor();
             if (exitCode != 0) {
                 System.err.println("Login script exited with code " + exitCode);
             }
@@ -54,14 +56,21 @@ public class AuthenticationProvider{
 
     public void register(RegisterData rdata) {
         try {
+            
+        
+            
             ProcessBuilder pb = new ProcessBuilder("scripts/register_user.sh",
                                 rdata.getUuid(), rdata.getPassword(), rdata.getfName(), rdata.getlName(),
                                 rdata.getDob().toString(), rdata.getIsoCode(), String.valueOf(rdata.isHivStatus()),
                                 rdata.getDiagnosisDate().toString(), String.valueOf(rdata.isTakingART()), rdata.getArtDate().toString());
             Process process = pb.start();
-            process.waitFor();
+            int exitCode=process.waitFor();
+            if(exitCode!=0){
+                throw new Error("Unable to register");
+            }
+
         } catch (IOException | InterruptedException e) {
-            e.printStackTrace();
+            throw new Error("unable to register");
         }
     }
 }
